Fix header spacing, broke by removing CSS Reset

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -28,6 +28,7 @@ header h1 {
   font-size: 72px;
   color: #fff;
   line-height: 1;
+  margin: 0;
   margin-bottom: 0.2em;
   width: 540px;
 }
@@ -37,6 +38,7 @@ header h2 {
   color: #9ddcff;
   font-weight: normal;
   line-height: 1.3;
+  margin: 0;
   width: 540px;
   letter-spacing: 0;
 }
